Registrazioni utenti sci club Fiocco

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,28 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<!--[if IE 8]><html class="no-js lt-ie9" lang="en" ><![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js" lang="en" ><!--<![endif]-->
 <head>
-  <meta charset="utf-8">
-  <title>RegistrazioniFiocco</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<meta charset="utf-8">
+<title>Registrazioni Fiocco</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Fogli di stile CSS -->
+<link rel="stylesheet" href="foundation-6.3.0-complete/css/normalize.css">
+<link rel="stylesheet" href="foundation-6.3.0-complete/css/foundation.css">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+ <!-- Librerie Javascript -->
+<script>
+  document.write('<script src=' +
+  ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
+  '.js><\/script>')
+</script>
+<script src="foundation-6.3.0-complete/js/foundation.min.js"></script>
+<script>
+ $(document).foundation();
+</script>
+<!-- Da qui inizial a stesura del Codice -->
+<app-root>Loading...</app-root>
+
+
 </body>
 </html>
